--- a/Docs/TODO.txt
+++ b/Docs/TODO.txt
@@ -1,12 +1,9 @@
 draw border in radar
 add blueprints for modules + ships
 add blueprints to wreckages
-add more ships(including enemies) + wreckages (images+xml)
-death causes wreckages to spawn
-collision damages instead of killing -> calculations
-session ends when destroyed
+menu for unlocking ships
 spawn random enemies based on game difficulty
-score calculations (different points for looting & destroying different enemies)
-credit calculated by score
+credits calculated by score
+save credits & ships in session
 
 documentation
