Fixed Nullpointer, added blueprint, added dropchance for ships

--- a/Docs/TODO.txt
+++ b/Docs/TODO.txt
@@ -1,9 +1,8 @@
 draw border in radar
-add blueprints for modules + ships
-add blueprints to wreckages
 menu for unlocking ships
 spawn random enemies based on game difficulty
 credits calculated by score
 save credits & ships in session
+wreckage xml für fehlende schiffe
 
 documentation
